map visiualization for nodes + junction + accidents assigned; heat map visualization to show exposure level of segments; build graph and route scoring; added data and methods section

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -60,7 +60,7 @@ DOI = {10.3390/futuretransp1030037}
 
 @misc{Unfallatlas2025,
   title        = {{Unfallatlas}},
-  author       = {{Statistische Ämter des Bundes und der Länder}},
+  author       = {{German Federal Statistical Office}},
   howpublished = {\url{https://unfallatlas.statistikportal.de/}},
   note         = {Interaktive Kartenanwendung zu Straßenverkehrsunfällen mit Personenschaden in Deutschland},
   year         = {2025},
@@ -98,5 +98,25 @@ DOI = {10.3390/futuretransp1030037}
 	volume = {10},
 	year = {2018},
 	bdsk-url-1 = {https://doi.org/10.1186/s12544-018-0305-9}}
+
+@book{AASHTO2010HSM,
+  author    = {{AASHTO}},
+  title     = {Highway Safety Manual},
+  year      = {2010},
+  publisher = {American Association of State Highway and Transportation Officials},
+  address   = {Washington, DC}
+}
+
+@book{ehrgott2005multicriteria,
+  title     = {Multicriteria Optimization},
+  author    = {Ehrgott, Matthias},
+  year      = {2005},
+  publisher = {Springer},
+  address   = {Berlin, Heidelberg},
+  isbn      = {978-3-540-21398-7},
+  series    = {Lecture Notes in Economics and Mathematical Systems},
+  volume    = {491}
+}
+
 
 
