--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -91,18 +91,18 @@
 \end{icmlauthorlist}
 
 % fill in your matrikelnummer, email address, degree, for each group member
-\icmlaffiliation{first}{Matrikelnummer 12345678, MSc Machine Learning}
+\icmlaffiliation{first}{Matrikelnummer 7064584, MSc Machine Learning}
 \icmlaffiliation{second}{Matrikelnummer 12345678, MSc Quantitative Data Science}
-\icmlaffiliation{third}{Matrikelnummer 12345678, MSc Quantitative Data Science}
+\icmlaffiliation{third}{Matrikelnummer 7320172, MSc Quantitative Data Science}
 \icmlaffiliation{fourth}{Matrikelnummer 7329274, MSc Quantitative Data Science}
 \icmlaffiliation{fith}{Matrikelnummer 7304640, MSc Quantitative Data Science}
 
 % put your email addresses here. You can use initials to save space, 
 % e.g. if you are called Max Mustermann, you can use \icmlcorrespondingauthor{MM}{max.mustermann@uni-tuebingen.de}
 % DO USE YOUR UNIVERSITY EMAIL ADDRESS!
-\icmlcorrespondingauthor{EB}{first1.last1@uni-tuebingen.de} 
+\icmlcorrespondingauthor{EB}{eric.berger@student.uni-tuebingen.de} 
 \icmlcorrespondingauthor{EE}{first2.last2@uni-tuebingen.de}
-\icmlcorrespondingauthor{LF}{first3.last3@uni-tuebingen.de}
+\icmlcorrespondingauthor{LF}{liaisan.faidrakhmanova@student.uni-tuebingen.de}
 \icmlcorrespondingauthor{LG}{luise.grasl@student.uni-tuebingen.de}
 \icmlcorrespondingauthor{TS}{tobias-marco.schnarr@student.uni-tuebingen.de}
 
@@ -126,11 +126,11 @@
 \printAffiliationsAndNotice{\icmlEqualContribution} % otherwise use the standard text.
 
 \begin{abstract}
-We investigate bicycle crash risk on Berlin’s urban street network, addressing a key limitation of many safety analyses: raw crash counts conflate danger with demand 
-and thus fail to distinguish intrinsically risky locations from high-use roads. We combine police-recorded crashes from the German \emph{Unfallatlas} with a city-wide 
+We investigated bicycle crash risk on Berlin’s urban street network, addressing a key limitation of many safety analyses: raw crash counts conflate danger with demand 
+and thus fail to distinguish intrinsically risky locations from high-use roads. We combined police-recorded crashes from the German \emph{Unfallatlas} with a city-wide 
 dataset of measured bicycle volumes to compute exposure-normalized risk at the street-segment level. Motivated by the empirical concentration of crashes at 
-intersections, we also derive risk estimates for network junctions. Risk is estimated at monthly resolution and can be conditioned on contextual factors (e.g., time 
-of day and weather) to capture temporal variability. We then aggregate segment- and junction-level risk to score arbitrary routes, enabling comparisons that trade off 
+intersections, we also derived risk estimates for network junctions. Risk was estimated at monthly resolution and could be conditioned on contextual factors (e.g., time 
+of day and weather) to capture temporal variability. We then aggregated segment- and junction-level risk to score arbitrary routes, enabling comparisons that trade off 
 estimated crash risk against convenience criteria such as distance or travel time. The result is a reproducible framework for exposure-controlled, context-aware 
 bicycle safety analysis and safety-informed routing on urban street networks.
 \end{abstract}
