1) added new columns in merged parquet files 2) added feature analysis 3) merged segments and nodes in one datased for feature analysis

--- a/notebooks/score_routing.ipynb
+++ b/notebooks/score_routing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "33cbdbce",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "dcc22668",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,9 @@
     "\n",
     "# Backwards compatibility: if you didn't add has_crossing, derive it\n",
     "if \"has_crossing\" not in acc_node_df.columns:\n",
-    "    acc_node_df[\"has_crossing\"] = acc_node_df[\"node_id\"].notna()\n"
+    "    acc_node_df[\"has_crossing\"] = acc_node_df[\"node_id\"].notna()\n",
+    "\n",
+    "acc_node_df\n"
    ]
   },
   {
