in method section changed function to approximate junction exposure

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -99,12 +99,18 @@ DOI = {10.3390/futuretransp1030037}
 	year = {2018},
 	bdsk-url-1 = {https://doi.org/10.1186/s12544-018-0305-9}}
 
-@book{AASHTO2010HSM,
-  author    = {{AASHTO}},
-  title     = {Highway Safety Manual},
-  year      = {2010},
-  publisher = {American Association of State Highway and Transportation Officials},
-  address   = {Washington, DC}
+@article{HADDAK20162025,
+title = {Exposure-based Road Traffic Fatality Rates by Mode of Travel in France},
+journal = {Transportation Research Procedia},
+volume = {14},
+pages = {2025-2034},
+year = {2016},
+note = {Transport Research Arena TRA2016},
+issn = {2352-1465},
+doi = {https://doi.org/10.1016/j.trpro.2016.05.170},
+url = {https://www.sciencedirect.com/science/article/pii/S2352146516301715},
+author = {Mohamed Mouloud Haddak},
+keywords = {Road traffic accidents, travel survey, mobility, risk assessment, risk exposure},
 }
 
 @book{ehrgott2005multicriteria,
@@ -118,5 +124,22 @@ DOI = {10.3390/futuretransp1030037}
   volume    = {491}
 }
 
+@techreport{hakkert2002uses,
+  title={The uses of exposure and risk in road safety studies},
+  author={Hakkert, A Shalom and Braimaister, L and Van Schagen, I},
+  year={2002},
+  institution={SWOV Institute for Road Safety SWOV, Leidschendam}
+}
 
+@article{WANG2020105838,
+title = {Investigating exposure measures and functional forms in urban and suburban intersection safety performance functions using generalized negative binomial - P model},
+journal = {Accident Analysis \& Prevention},
+volume = {148},
+pages = {105838},
+year = {2020},
+issn = {0001-4575},
+doi = {https://doi.org/10.1016/j.aap.2020.105838},
+url = {https://www.sciencedirect.com/science/article/pii/S0001457520316584},
+author = {Kai Wang and Shanshan Zhao and Eric Jackson},
+}
 
