--- a/notebooks/score_routing.ipynb
+++ b/notebooks/score_routing.ipynb
@@ -2682,7 +2682,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.14.0)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
