--- a/notebooks/datasets_merge.ipynb
+++ b/notebooks/datasets_merge.ipynb
@@ -4236,7 +4236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.14.0)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
